--- a/css/style.css
+++ b/css/style.css
@@ -75,17 +75,9 @@ h6 {
     letter-spacing: -0.02em;
 }
 
-/* Background Texture - Topographical */
+/* Background Texture - Topographical - REMOVED per user request */
 .topo-bg {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url("data:image/svg+xml,%3Csvg width='100' height='100' viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M1 1C20 10 40 5 60 15S90 25 100 20M0 30C20 40 40 35 60 45S90 55 100 50M0 60C20 70 40 65 60 75S90 85 100 80' stroke='%23ffffff' fill='none' opacity='0.03'/%3E%3C/svg%3E");
-    background-size: 300px 300px;
-    pointer-events: none;
-    z-index: -1;
+    display: none;
 }
 
 /* Utility Classes */
@@ -351,6 +343,29 @@ section {
 }
 
 /* Services Preview */
+#services-preview {
+    position: relative;
+    /* Ensure z-index allows pseudo-element to be behind content but visible */
+    z-index: 1;
+}
+
+#services-preview::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../assets/design.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    opacity: 0.15;
+    /* Transparent background design */
+    z-index: -1;
+    pointer-events: none;
+}
+
 .services-grid {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
