--- a/css/style.css
+++ b/css/style.css
@@ -76,8 +76,26 @@ h6 {
 }
 
 /* Background Texture - Topographical - REMOVED per user request */
+/* Background Texture - Topographical - Default hidden, shown only on specific pages */
 .topo-bg {
     display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('../assets/design.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    pointer-events: none;
+    z-index: -1;
+    opacity: 0.15;
+}
+
+/* Show only on Home Page */
+.home-page .topo-bg {
+    display: block;
 }
 
 /* Utility Classes */
@@ -349,22 +367,7 @@ section {
     z-index: 1;
 }
 
-#services-preview::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-image: url('../assets/design.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    opacity: 0.15;
-    /* Transparent background design */
-    z-index: -1;
-    pointer-events: none;
-}
+
 
 .services-grid {
     display: grid;
